src/scss/base/_lists.scss
ul,
ol {
	display: flex;
	flex-direction: column;
	align-self: center;
	margin-bottom: 0;
	gap: 0.5rem;
	text-align: left;

	li {
		color: var(--off-black);
		font-size: 1.125rem;
		line-height: 150%;
		text-align: left;
		padding-left: 0.25rem;
		transform: translateX(-0.25rem);
		font-weight: normal;

		span {
			font-weight: 500;
		}
	}

	&.list-transform-none li {
		transform: none;
		padding-left: 0;
	}

	&.gap--medium {
		gap: 1rem;
	}
}

ol {
	list-style-type: decimal;
}

ul {
	list-style-type: disc;
}

ul.list-none {
	list-style-type: none;
}

.list {
	display: flex;
	flex-direction: column;
	line-height: 150%;
	list-style-type: decimal;
	margin: 0;
	padding-left: 24px;
	grid-column-gap: 16px;
	grid-row-gap: 16px;

	&.margin-bottom {
		grid-column-gap: 1px;
		grid-row-gap: 1px;
	}

	&.margin-bottom._0 {
		align-items: flex-start;
		align-self: auto;
		flex: 0 auto;
		grid-column-gap: 16px;
		grid-row-gap: 16px;
	}

	&.numerical {
		padding-left: 21px;
		padding-bottom: 0;
	}

	&._8px {
		align-items: flex-start;
		align-self: flex-start;
		grid-column-gap: 8px;
		grid-row-gap: 8px;
		list-style-type: disc;
		padding-left: 18px;
		text-align: left;

		&.numbered {
			list-style-type: decimal;
			padding-left: 24px;
		}
	}

	&._24px {
		grid-column-gap: 24px;
		grid-row-gap: 24px;
	}

	&--dark {
		li {
			color: #cccccc;
		}
	}
}

